main.css
* {
  font-family: monospace;
  margin: 0;
  padding: 0;
}

#topHalf{
  position: relative;
  width: 100%;
  height: 25%;
  background-color: rgb(224,58,62); /*official UMD red rgb*/
  text-align: center;
  display: table;
}
#menubar{
  display: table-cell;
  vertical-align: middle;
  font-size: 16px;
}
.social_icons {
  display: inline-block;
  padding-right: 10px;
  height: 50px;
  width: auto;
}
.social_icons:hover {
  transform: scale3d(1.03, 1.03, 1.03);
}
#bottomHalf{
  position: relative;
  width: 100%;
  height: 75%;
  background-color: white;
}
#title {
padding-top: 50px;
  text-align: center;
  font-size: 16px;
  top: 25%;
  padding-bottom: 20px;
}
#schoolImages {
  padding-top: 20px;
  text-align:center;
}
#CSLogo, #MathLogo {
  padding: 10px;
  height: 75px;
  width: auto;
}

#list {
  position: relative;
  display: inline-block;
  font-size: 18px;
  list-style-type: none;
  text-align: center;
}
#list li {
  float: left;
  padding: 10px 5px;
}
#list li a {
  color: black;
  text-decoration: none;
  padding: 2px 8px;
}
#list li a:hover {
  color: rgb(255,255,255);
  border-style: outset;
  border-width: 2px;
}

#name {
  padding-bottom: 20px;
}

/*----------Courses Style----------*/
table, th, td {
  font-size: 15px;
  border: 1px outset black;
  text-align: left;
}

tr:hover, #botcamp_link, #math_research_link {
  color: rgb(255,213,32); /*official UMD gold rgb*/
}
.table_header:hover {
  color: rgb(0,0,0);
}
table {
  margin: 10px;
  display: inline-block;
}

#math_table_title, #cs_table_title {
  color: rgb(224,58,62); /*official UMD red rgb*/
  text-align: center;
}

#course_tables {
  display: table;
  position: relative;
  margin: 0 auto;
  width: 75%;
  top: 5%;
  text-align: center;
}
#CS_table, #MATH_table {
  display: inline-block;
}
/*----------Experience Style----------*/
#description {
  display: block;
  text-align: justify;
  font-size: 15px;
  margin: 0 auto;
  width: 75%;
  padding-top: 50px;
  line-height: 20px;
}
#viewMoreBelow {
  color: rgb(224,58,62); /*official UMD red rgb*/
  margin: auto;
  text-align: center;
  margin: 0 auto;
  padding-top: 40px;
  padding-bottom: 10px;
}
#internshipLogos {
  text-align: center;
  margin: 0 auto;
  width: 100%;
}
#LeidosLogo, #NASALogo {
  padding: 50px;
  padding-bottom: 60px;
  height: 150px;
  width: auto;
}
#LeidosLogo:hover, #NASALogo:hover {
  height: 150px;
  width: auto;
  transform: scale3d(1.05, 1.05, 1.05);
}
#linkToOtherJobs {
  text-align: center;
}
#otherJobsLink:link, #otherJobsLink:visited {
  color: rgb(255,213,32); /*official UMD gold rgb*/
}
#otherJobsLink:hover, #botcamp_link:hover, #math_research_link:hover {
  color: rgb(224,58,62); /*official UMD red rgb*/
}
/*----------LeidosInternship & NASAInternship Style----------*/
#LeidosTitle, #NASATitle{
  padding-top: 50px;
  text-align: center;
  margin: 0 auto;
  padding-bottom: 20px;
}
#LeidosSymbol {
  display: block;
  margin: auto;
  padding-bottom: 0px;
}
#NASASymbol {
  display: block;
  margin: auto;
  padding-top: 20px;
  padding-bottom: 40px;
}
#LeidosDescription, #NASADescription {
  display: block;
  text-align: justify;
  font-size: 15px;
  margin: 0 auto;
  width: 75%;
  line-height: 20px;
}
/*----------OtherJobs Style----------*/
#OtherJobsTitle {
  text-align: center;
  padding-top: 50px;
}
#JobList{
  padding-top: 25px;
  display: block;
  margin: auto;
  text-align: center;
}
.jobImage{
  display: block;
  padding-right: 10px;
}
.jobDescription {
  text-align: center;
  font-size: 14px;
}
#JobsTable {
  padding-top: 20px;
  text-align: center;
  border: none;
}
#JobsTable table, #JobsTable th, #JobsTable td {
  font-size: 15px;
  border: none;
  padding: 10px;
  text-align: justify;
}
#JobsTable tr:hover {
  color: rgb(0,0,0);
}
/*----------Activities Style----------*/
.activity_description {
  display: block;
  text-align: justify;
  font-size: 15px;
  margin: 0 auto;
  width: 75%;
  padding-top: 50px;
  line-height: 20px;
}
.activityTitle{
  padding-bottom: 10px;
}

